RESOLVED FIXED215523
Live Web Content processes do not respect accent color if dynamically changed to "multicolor"
https://bugs.webkit.org/show_bug.cgi?id=215523
Summary Live Web Content processes do not respect accent color if dynamically changed...
Tim Horton
Reported 2020-08-14 14:36:27 PDT
Live Web Content processes do not respect accent color if dynamically changed to "multicolor"
Attachments
Patch (3.60 KB, patch)
2020-08-14 14:36 PDT, Tim Horton
no flags
Patch (17.43 KB, patch)
2020-08-14 16:19 PDT, Tim Horton
no flags
test logging (19.04 KB, patch)
2020-08-14 18:12 PDT, Tim Horton
no flags
test logging (23.30 KB, patch)
2020-08-15 14:47 PDT, Tim Horton
no flags
Patch (21.69 KB, patch)
2020-08-15 15:11 PDT, Tim Horton
no flags
Tim Horton
Comment 1 2020-08-14 14:36:38 PDT
Tim Horton
Comment 2 2020-08-14 14:36:40 PDT
Wenson Hsieh
Comment 3 2020-08-14 14:39:58 PDT
Comment on attachment 406622 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=406622&action=review > Source/WebKit/UIProcess/Cocoa/PreferenceObserver.mm:80 > + if (!a && !b) > + return true; > + return a && [a isEqual:b]; Nit - I have an ever-so-slight preference for `a == b || [a isEqual:b]`, instead of having a separate branch.
Tim Horton
Comment 4 2020-08-14 15:21:48 PDT
Per Arne kindly pointed out that he added a testing mechanism for this, so I'm writing a test.
Tim Horton
Comment 5 2020-08-14 16:19:01 PDT
Tim Horton
Comment 6 2020-08-14 17:58:44 PDT
Oh dear, the new test passes for me but not the bots.
Tim Horton
Comment 7 2020-08-14 18:12:47 PDT
Created attachment 406640 [details] test logging
Tim Horton
Comment 8 2020-08-15 14:47:19 PDT
Created attachment 406676 [details] test logging
Tim Horton
Comment 9 2020-08-15 15:11:20 PDT
EWS
Comment 10 2020-08-15 15:53:45 PDT
Committed r265740: <https://trac.webkit.org/changeset/265740> All reviewed patches have been landed. Closing bug and clearing flags on attachment 406677 [details].
Note You need to log in before you can comment on or make changes to this bug.