Live Web Content processes do not respect accent color if dynamically changed to "multicolor" https://bugs.webkit.org/show_bug.cgi?id=215523 <rdar://problem/63941133>

Reviewed by Wenson Hsieh.

Source/WebKit:

* UIProcess/Cocoa/PreferenceObserver.mm:
(-[WKUserDefaults _notifyObserversOfChangeFromValuesForKeys:toValuesForKeys:]):
* WebProcess/cocoa/WebProcessCocoa.mm:
(WebKit::setPreferenceValue):
The NSUserDefaults syncing mechanism does not propagate defaults that are
deleted or changed to nil.

Allow nil, and fix up an assert that would fire for the same reason.

Tools:

* TestWebKitAPI/Tests/WebKit/PreferenceChanges.mm:
(deleteTestDefaults):
(TEST):
Fix some minor style issues with these tests.
Fix a bug where these tests would leak state between themselves by leaving defaults behind.
Change the NSUserDefaults key name so that it is abundantly obvious where it comes from when you see it in your defaults.
Leave a FIXME for the future that these tests should probably not be writing to the real persistent defaults.
Add a test that ensures that the observer correctly respects deletion of a default.


Canonical link: https://commits.webkit.org/228311@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@265740 268f45cc-cd09-0410-ab3c-d52691b4dbfc